tests/negative/neg_channel_package_not_withd.safe
-- Test: neg_channel_package_not_withd
-- Description: Qualified channel references require a matching with clause and interface.
-- Expected: REJECT source_frontend_error

package Channel_Package_Not_Withd_Test

   task Sender

      loop
         send Missing_Package.Data_Ch, 1;




